--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,8 @@
         <span>stay secure and alert.</span>
       </p>
 
-      <form action="/" method="POST">
+      <form action="/index/" method="POST">
+        {% csrf_token %}
         <div class="mb-3">
           <label for="image_path" class="form-label"
             >Enter path of the image</label
@@ -158,7 +159,7 @@
 
       <div class="text-center">
         <p class="result">
-          {{Result}}
+          {{prediction}}
         </p>
       </div>
       <div class="information-cards">
